--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </div>
             <div class="col">
                 <div class="statistic">Характеристика введенных символов</div>
-                <div class="require">Нажмите кнопку Ок чобы вывести характеристику</div>
+                <div class="require">Нажмите кнопку Ок чтобы вывести характеристику</div>
+                <ul class="characteristic-list"></ul>
+                <div class="text-statistic disabled">Общая статистика</div>
             </div>
         </div>
     </div>
